src/test/ui/const-generics/issues/issue-66205.rs
// check-pass

#![allow(incomplete_features, dead_code, unconditional_recursion)]
#![feature(const_generics)]

fn fact<const N: usize>() {
    fact::<{ N - 1 }>();
}

fn main() {}
